# Cyrano_seul_contre_tous

./: .gitignore  CMakeLists.txt  README.md  TODO.md  cmake_test_discovery_640e9d6d0f.json
docs/: TODO.md
resources/: Castle Green 1.tsx  class_diagram.puml  cursor.tmx  dataset.json  defaultSave.json  little_test_20.tmx  visage.xml
resources/GUI/: MainMenu.txt
resources/Maps/: Castle Blue.tsx  Map1.tmx
resources/Maps/castleBlue/: CastleBlue.tmx  CastleBlue.tsx  defaultMap.json  entities.json
resources/cursor/: cursor.tsx
resources/sprites/cyrano/: Cyrano.json  Panache.json
resources/sprites/soldier/: Soldier.json  soldier.json
saves/slot1/: save.json
src/core/: Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  CharacterAI.cpp  CharacterFactory.cpp  CharacterFactory.h  Cyrano.cpp  Cyrano.h  GameApp.cpp  GameApp.h  GameTypes.h  Map.cpp  Map.h  MapLayer.cpp  MapLayer.h  NPC.h  PlayerCharacter.h  Save.cpp  Save.h  Soldier.cpp  Soldier.h  TurnQueue.cpp  TurnQueue.h  UIManager.cpp  UIManager.h  myMain.cpp  rendering.cpp  tguitest.h
src/core/app/: GameApp.cpp  GameApp.h  GameTypes.h  myMain.cpp
src/core/entities/: Character.cpp  Character.h  CharacterAI.cpp  CharacterAI.h  CharacterFactory.cpp  CharacterFactory.h  Cyrano.cpp  Cyrano.h  NPC.h  PlayerCharacter.h  Soldier.cpp  Soldier.h
src/core/graphics/: Animation.h  Camera.cpp  Camera.h
src/core/io/: Save.cpp  Save.h
src/core/ui/: UIManager.cpp  UIManager.h
src/core/world/: Map.cpp  Map.h  TurnQueue.cpp  TurnQueue.h
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  unitTests.cpp
